[Moves] Get the correct flavor text for the current generation

--- a/src/app/pages/pokemon-detail/pokemon-learned-moves/pokemon-move/pokemon-move.component.html
+++ b/src/app/pages/pokemon-detail/pokemon-learned-moves/pokemon-move/pokemon-move.component.html
@@ -1,7 +1,7 @@
 <p-card
   class="card-small"
   [styleClass]="moveType + ' mb-2 hover:shadow-4'"
-  pTooltip="{{ flavorText![0] }}"
+  pTooltip="{{ flavorText?.flavor_text }}"
   tooltipPosition="top"
 >
   <div class="flex justify-content-between">
