--- a/src/app/pages/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.component.html
@@ -1,39 +1,37 @@
 @if (!!pokeApi.selectedPokemon()) {
 <p-panel header="General" [toggleable]="true" styleClass="text-center">
   <img
-    [src]="
-      pokeApi.selectedPokemon()!.details.sprites.other['official-artwork']
-        .front_default
-    "
+    [src]="pokemon.details.sprites.other['official-artwork'].front_default"
     width="150"
     height="150"
   />
   <div class="flex justify-content-between">
     <div class="flex flex-column align-items-start">
       <p class="capitalize font-bold text-xl">
-        {{ pokeApi.selectedPokemon()!.details.name }}
+        {{ pokemon.details.name }}
       </p>
       <p>{{ pokemonId | number : "3.0-0" }}</p>
     </div>
     <div class="flex">
-      <div class="icon" [ngClass]="pokemonTypes[0]">
+      <div class="icon" [ngClass]="pokemon.details.types[0].type.name">
         <p-image
           [width]="imageSize"
           [height]="imageSize"
-          [src]="'/images/types/' + pokemonTypes[0] + '.svg'"
-          [pTooltip]="pokemonTypes[0]"
+          [src]="'/images/types/' + pokemon.details.types[0].type.name + '.svg'"
+          [pTooltip]="pokemon.details.types[0].type.name"
           tooltipPosition="top"
           positionTop="-38"
           tooltipStyleClass="capitalize"
         />
       </div>
-      @if (pokemonTypes.length > 1 && pokemonTypes[1]) {
-      <div class="icon ml-2" [ngClass]="pokemonTypes[1]">
+      @if (pokemon.details.types.length > 1 &&
+      pokemon.details.types[1].type.name) {
+      <div class="icon ml-2" [ngClass]="pokemon.details.types[1].type.name">
         <p-image
           [width]="imageSize"
           [height]="imageSize"
-          [src]="'/images/types/' + pokemonTypes[1] + '.svg'"
-          [pTooltip]="pokemonTypes[1]"
+          [src]="'/images/types/' + pokemon.details.types[1].type.name + '.svg'"
+          [pTooltip]="pokemon.details.types[1].type.name"
           tooltipPosition="top"
           positionTop="-30"
           tooltipStyleClass="capitalize"
@@ -44,7 +42,7 @@
   </div>
 </p-panel>
 <pokemon-evolution></pokemon-evolution>
-<pokemon-type [pokemonTypes]="pokemonTypes"></pokemon-type>
+<pokemon-type [pokemonTypes]="pokemon.details.types"></pokemon-type>
 <pokemon-location></pokemon-location>
 <pokemon-learned-moves></pokemon-learned-moves>
 }
