--- a/src/app/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pages/pokemon-list/pokemon-list.component.html
@@ -1,3 +1,16 @@
-@for(pokemon of pokeApi.pokemonList(); track pokemon) {
+@if (pokeApi.pokemonList().length > 0) {
+<p-card class="pokemon-filter-card" styleClass="my-2">
+  <p-floatlabel variant="on">
+    <input
+      pInputText
+      id="on_label"
+      autocomplete="off"
+      [(ngModel)]="filterValue"
+      (keyup)="onFilterPokemon()"
+    />
+    <label for="on_label">Filter By Name or Type</label>
+  </p-floatlabel>
+</p-card>
+} @for(pokemon of filteredPokemonList; track pokemon) {
 <pokemon-list-entry [pokemon]="pokemon"></pokemon-list-entry>
 }
