--- a/src/app/pages/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pages/pokemon-list/pokemon-list.component.scss
@@ -1,3 +1,11 @@
 .pokemon-filter-card ::ng-deep .p-card-body {
   align-items: center;
 }
+
+.type-select ::ng-deep li.p-select-option {
+  padding: 0;
+}
+
+.icon-image ::ng-deep img {
+  vertical-align: middle;
+}
